linuxkpi: gracefully handle page lookup failure in lkpi_vmf_insert_pfn_prot_locked

Currently lkpi_vmf_insert_pfn_prot_locked will check the page iter to
find a usage of the page. If no page was found, it continues on to
try using PHYS_TO_VM_PAGE() to get a page. Currently it does not check
if a valid page was found before passing it to vm_page_busy_acquire,
which can cause a kernel page fault as vm_page_busy_acquire expects
a valid page pointer.

This can easily be triggered while starting KDE6 in wayland mode, which
many users have been reporting. With this change plasma6 starts properly
in wayland mode.

Sponsored by:	NVIDIA
PR:		288565
Reviewed by:	markj, kbowling (mentor)
Differential Revision:	https://reviews.freebsd.org/D53412